correct spacing on sidebar links

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -43,6 +43,9 @@ body {
 
 .sidebar ul {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .card {
